[gd_scene load_steps=12 format=3 uid="uid://pxhq23hn4r6m"]

[ext_resource type="Theme" uid="uid://cr5645fhno242" path="res://Resource/UITheme.tres" id="1_li654"]
[ext_resource type="Texture2D" uid="uid://3ko8pv2n6v6k" path="res://Resource/Img/1714708251113.jpg" id="2_4ylg3"]
[ext_resource type="Script" path="res://Script/VisualScenes/settings_scene.gd" id="2_id2at"]
[ext_resource type="PackedScene" uid="uid://cojwyjeq1a47n" path="res://Scene/WidgetScene/title_bar.tscn" id="3_jwj8r"]
[ext_resource type="Texture2D" uid="uid://bil0hsnon1iek" path="res://icon-LP.png" id="4_fbau3"]
[ext_resource type="Texture2D" uid="uid://c3slti1mheln" path="res://Resource/Img/headimg.png" id="5_c0lpm"]
[ext_resource type="FontFile" uid="uid://du5po75t5by2" path="res://Resource/Font/汉仪洛天依体简.ttf" id="5_igdv4"]
[ext_resource type="Texture2D" uid="uid://b88jltdtgchsd" path="res://Resource/Img/headimg2.jpg" id="8_abswa"]

[sub_resource type="LabelSettings" id="LabelSettings_s2syy"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_x5xca"]
font = ExtResource("5_igdv4")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_12bve"]
font_size = 30

[node name="settings_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_li654")
script = ExtResource("2_id2at")
metadata/_edit_vertical_guides_ = []

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4ylg3")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="title_bar" parent="VBoxContainer" instance=ExtResource("3_jwj8r")]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="游戏" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/游戏"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 70

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/游戏/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Path" type="HBoxContainer" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PathLable" type="Label" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/Path"]
layout_mode = 2
size_flags_horizontal = 2
text = "歌单路径"

[node name="PathTextEdit" type="LineEdit" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/Path"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text_direction = 1

[node name="TrackKey" type="VBoxContainer" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey"]
layout_mode = 2
text = "键位设置"
label_settings = SubResource("LabelSettings_s2syy")

[node name="Track1" type="HBoxContainer" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey/Track1"]
layout_mode = 2
text = "轨道1"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey/Track1"]
layout_mode = 2
size_flags_horizontal = 10
text = "setting
"

[node name="Track2" type="HBoxContainer" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey/Track2"]
layout_mode = 2
text = "轨道2"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey/Track2"]
layout_mode = 2
size_flags_horizontal = 10
text = "setting
"

[node name="Track3" type="HBoxContainer" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey/Track3"]
layout_mode = 2
text = "轨道3"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey/Track3"]
layout_mode = 2
size_flags_horizontal = 10
text = "setting
"

[node name="Track4" type="HBoxContainer" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey/Track4"]
layout_mode = 2
text = "轨道4"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/TrackKey/Track4"]
layout_mode = 2
size_flags_horizontal = 10
text = "setting
"

[node name="音频" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/音频"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 70

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/音频/MarginContainer"]
layout_mode = 2

[node name="Adjust" type="HBoxContainer" parent="VBoxContainer/TabContainer/音频/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="AdjustLable" type="Label" parent="VBoxContainer/TabContainer/音频/MarginContainer/VBoxContainer/Adjust"]
layout_mode = 2
size_flags_horizontal = 2
text = "延迟调整(ms)"

[node name="AdjustSpinBox" type="SpinBox" parent="VBoxContainer/TabContainer/音频/MarginContainer/VBoxContainer/Adjust"]
layout_mode = 2
size_flags_horizontal = 4
min_value = -5.0
max_value = 5.0
step = 0.01

[node name="Volume" type="HBoxContainer" parent="VBoxContainer/TabContainer/音频/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VolumeLable" type="Label" parent="VBoxContainer/TabContainer/音频/MarginContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 2
text = "音量"

[node name="VolumeHSlider" type="HSlider" parent="VBoxContainer/TabContainer/音频/MarginContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0
rounded = true

[node name="视频" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/视频"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 70

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/视频/MarginContainer"]
layout_mode = 2

[node name="Light" type="HBoxContainer" parent="VBoxContainer/TabContainer/视频/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LightLable" type="Label" parent="VBoxContainer/TabContainer/视频/MarginContainer/VBoxContainer/Light"]
layout_mode = 2
size_flags_horizontal = 2
text = "音量"

[node name="LightHSlider" type="HSlider" parent="VBoxContainer/TabContainer/视频/MarginContainer/VBoxContainer/Light"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 50.0
rounded = true

[node name="关于" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/关于"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 70

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/关于/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_fbau3")

[node name="ProjInfo" type="VBoxContainer" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/HBoxContainer/ProjInfo"]
layout_mode = 2
text = "Luo Pulse 洛之动脉"
label_settings = SubResource("LabelSettings_x5xca")

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/HBoxContainer/ProjInfo"]
layout_mode = 2
text = "洛天依12周年生日快乐!"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
text = "GitHub"

[node name="VersionInfo" type="HBoxContainer" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/VersionInfo"]
layout_mode = 2
text = "当前版本"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/VersionInfo"]
layout_mode = 2
size_flags_horizontal = 10
text = "2024.7.01b"

[node name="DeveloperInfo" type="VBoxContainer" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo"]
layout_mode = 2
text = "开发者信息"
label_settings = SubResource("LabelSettings_12bve")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo"]
layout_mode = 2

[node name="HeadImg" type="TextureRect" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("5_c0lpm")

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer"]
layout_mode = 2
text = "Include源来是小白"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BiliLink" type="Button" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "BiliBili"

[node name="GHLink" type="Button" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "GitHub"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo"]
layout_mode = 2

[node name="HeadImg" type="TextureRect" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("8_abswa")

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer2"]
layout_mode = 2
text = "星海流歌Simple"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BiliLink2" type="Button" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "BiliBili"

[node name="GHLink2" type="Button" parent="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "GitHub"

[connection signal="text_submitted" from="VBoxContainer/TabContainer/游戏/MarginContainer/VBoxContainer/Path/PathTextEdit" to="." method="_on_path_text_edit_text_submitted"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/音频/MarginContainer/VBoxContainer/Adjust/AdjustSpinBox" to="." method="_on_adjust_spin_box_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/TabContainer/音频/MarginContainer/VBoxContainer/Volume/VolumeHSlider" to="." method="_on_volume_h_slider_drag_ended"]
[connection signal="drag_ended" from="VBoxContainer/TabContainer/视频/MarginContainer/VBoxContainer/Light/LightHSlider" to="." method="_on_light_h_slider_drag_ended"]
[connection signal="pressed" from="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_pj_link_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer/HBoxContainer/BiliLink" to="." method="_on_bili_link_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer/HBoxContainer/GHLink" to="." method="_on_gh_link_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer2/HBoxContainer/BiliLink2" to="." method="_on_bili_link_2_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/关于/MarginContainer/VBoxContainer/DeveloperInfo/HBoxContainer2/HBoxContainer/GHLink2" to="." method="_on_gh_link_2_pressed"]
